--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -43,7 +43,7 @@
                     <div th:if="${userEmail != 'anonymousUser'}" class="login-links">
                         <!-- 이메일 표시 -->
                         <div class="link-item">
-                            <a class="nav-link" th:text="${userEmail}">이메일</a>
+                            <a class="nav-link" th:text="${userEmail}"></a>
                         </div>
 
                         <!-- 알림 아이콘 (관리자가 아닌 경우만) -->
