--- a/src/main/resources/templates/notifications/eventView.html
+++ b/src/main/resources/templates/notifications/eventView.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>이벤트 상세 페이지</title>
-
+    <!-- Font Awesome CDN 추가 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <!-- jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.6.4.js"
             integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
