지원하기 기능(applicationTerms) 문구 밎 내용 수정 1차
지원하기 기능(applicationTerms) 문구 밎 내용 수정 1차

--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -45,7 +45,8 @@
                 <div class="applyContent">
                     <input type="text" placeholder="제목을 입력해주세요.">
                     <div class="contArea">
-
+                        <div class="imgArea"></div>
+                        <div class="textArea"></div>
                     </div>
                 </div>
                 <!-- </section> -->
