입력 값을 controller에 보내기 위해 form 감쌈
입력 값을 controller에 보내기 위해 form 감쌈

--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -42,44 +42,47 @@
             
             
             <section>
-                <div class="applyContent">
-                    <input type="text" placeholder="제목을 입력해주세요.">
-                    <div class="contArea">
-                        <div class="imgArea"></div>
-                        <div class="textArea"></div>
+                <form>
+                    <div class="applyContent">
+                        <input type="text" placeholder="제목을 입력해주세요.">
+                        <div class="contArea">
+                            <div class="imgArea"></div>
+                            <div class="textArea"></div>
+                        </div>
                     </div>
-                </div>
-                <!-- </section> -->
-                <!-- <section> -->
-                <div class="applyWarap">
-                    <div div class="applyInput">
-                        <div class="InputArea">
-                            <label for="image" class="imageUpload">
-                                <div class="content">
-                                    <span class="Image">
-                                        <i class="fa-regular fa-image"></i>
-                                    </span>
-                                    <div class="inputText">이미지 추가</div>
-                                </div>
-                            </label>
-                            <input type="file" name="" id="image" multiple>
-                        </div>
-                        <div class="InputArea">
-                            <div class="content text">
-                                <span class="Image">
-                                    <i class="fa-regular fa-pen-to-square"></i>
-                                </span>
-                                <div class="inputText">텍스트 추가</div>
+                    <!-- </section> -->
+                    <!-- <section> -->
+                    <div class="applyWarap">
+                        <div div class="applyInput">
+                            <div class="InputArea">
+                                <label for="image" class="imageUpload">
+                                    <div class="content">
+                                        <span class="Image">
+                                            <i class="fa-regular fa-image"></i>
+                                        </span>
+                                        <div class="inputText">이미지 추가</div>
+                                    </div>
+                                </label>
+                                <input type="file" name="" id="image" multiple>
                             </div>
-                        </div>
-                    </div><!--applyInput-->
-                    <button type="button" class="temporary">
-                      임시 저장  
-                    </button>
-                    <button type="submit" class="apply">
-                      지원하기  
-                    </button>
-                </div><!--applyWarap-->
+                            <div class="InputArea">
+                                <div class="content text">
+                                    <span class="Image">
+                                        <i class="fa-regular fa-pen-to-square"></i>
+                                    </span>
+                                    <div class="inputText">텍스트 추가</div>
+                                </div>
+                            </div>
+                        </div><!--applyInput-->
+                        <button type="button" class="temporary">
+                          임시 저장
+                        </button>
+                        <button type="submit" class="apply">
+                          지원하기
+                        </button>
+
+                    </div><!--applyWarap-->
+                </form>
             </section>
         </div>
     </main>
