--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -6,6 +6,7 @@
     <title>Chat Room</title>
     <!-- StompJS CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@stomp/stompjs@7.0.0/bundles/stomp.umd.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/chat/chatRoom.js" defer></script>
     <link rel="stylesheet" href="/css/chat/chatRoom.css" />
   </head>
