--- a/src/main/resources/templates/contest/ContestUpload1.html
+++ b/src/main/resources/templates/contest/ContestUpload1.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/fragments/layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/contest/ContestUpload1.css">
-    <script src="/js/contest/ContestUpload1.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" th:href="@{/css/contest/ContestUpload1.css}">
+    <script th:src="@{/js/contest/ContestUpload1.js}"></script>
 </head>
-
-<body>
+<th:block layout:fragment="content">
 <div class="Contestupload1">
     <h1>예산은 어떻게 되나요?</h1>
     <form action="/contest/budget" method="post" enctype="multipart/form-data">
@@ -67,5 +64,6 @@
         </div>
     </form>
 </div>
-</body>
+</th:block>
+
 </html>
