--- a/src/main/resources/templates/list/contestList.html
+++ b/src/main/resources/templates/list/contestList.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+                     layout:decorate="~{/fragments/layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- FontAwesome CSS 추가 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
-    <!-- jQuery 추가 (기존 방식 및 새 방식 혼합) -->
-    <script src="https://code.jquery.com/jquery-3.6.4.js"
-            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-            crossorigin="anonymous"></script>
-    <script src="/js/jquery-3.7.1.min.js"></script>
-
-    <!-- Bootstrap 추가 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/js/bootstrap/bootstrap.min.js"></script>
-
-    <!-- Custom CSS 및 헤더, 푸터 CSS 추가 -->
     <link rel="stylesheet" th:href="@{/css/list/contestList.css}">
-    <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
-    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
+    <script th:src="@{/js/list/contestList.js}"></script>
 </head>
-<body>
-    <header th:replace="~{fragments/header :: headerFragment}">
-
-    </header>
+<th:block layout:fragment="content">
     <main>
         <div class="mainWrap">
             <div class="banner">
@@ -119,8 +99,5 @@
             </section><!--section-->
         </div>
     </main>
-    <footer th:replace="~{fragments/footer :: footerFragment}">
-
-    </footer>
-</body>
+</th:block>
 </html>
