--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>register</title>
     <link rel="stylesheet" href="/css/user/register.css" />
     <script src="/js/user/register.js"></script>
@@ -9,7 +8,9 @@
 <body>
 <div class="signup-container">
     <form action="/users/register" method="post" enctype="multipart/form-data">
-    <img th:src="@{/img/fragments/logoGG.png}" alt="D'OH Logo" width="150px" height="75px">
+    <a th:href="@{/}">
+        <img th:src="@{/img/fragments/logoGG.png}" alt="D'OH Logo" width="150px" height="75px">
+    </a>
     <h2>이메일 가입하기</h2>
     <label for="email">이메일 주소</label>
     <div class="email-container">
