--- a/src/main/resources/static/css/fragments/quickMenu.css
+++ b/src/main/resources/static/css/fragments/quickMenu.css
@@ -1,161 +1,142 @@
-    :root
-    {
-        --main-color : #c1c0ff;
-        --sub-color : #ECFCE4;
-        --color-black : #000;
-        --dark-gray : #757575;
-        --line-gray: #D9D9D9;
-        --color-white : #fff;
-        
-        --font-size-32 : 32px;
-        --font-size-24 : 24px;
-        --font-size-20 : 20px;
-        --font-size-16 : 16px;
-        --font-size-14 : 14px;
-        --font-size-12 : 12px;
+:root {
+  --main-color: #c1c0ff;
+  --sub-color: #ecfce4;
+  --color-black: #000;
+  --dark-gray: #757575;
+  --line-gray: #d9d9d9;
+  --color-white: #fff;
 
-    }
+  --font-size-32: 32px;
+  --font-size-24: 24px;
+  --font-size-20: 20px;
+  --font-size-16: 16px;
+  --font-size-14: 14px;
+  --font-size-12: 12px;
+}
 
-    a
-    {
-        color: var(--color-white);
-    }
+a {
+  color: var(--color-white);
+}
 
-    .quickMenu
-    {
-        position: fixed;
-        bottom: 10%;
-        right: 40px;
-        width: 52px;
-        z-index: 9;
-    }
+.quickMenu {
+  position: fixed;
+  bottom: 10%;
+  right: 40px;
+  width: 52px;
+  z-index: 9;
+}
 
-    .quickMenu ul
-    {
-        gap: 30px 0;
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
+.quickMenu ul {
+  gap: 30px 0;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-    ul li.list
-    {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 8px;
-        background-color: var(--color-black);
-        width: 100%;
-        height: 52px;
-        cursor: pointer;
-    }
+ul li.list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background-color: var(--color-black);
+  width: 100%;
+  height: 52px;
+  cursor: pointer;
+}
 
-    ul li.list:hover
-    {
-        background-color: var(--color-white);
-        border: 1px solid var(--line-gray);
-    }
+ul li.list:hover {
+  background-color: var(--color-white);
+  border: 1px solid var(--line-gray);
+}
 
-    .chat.active
-    {
-        background-color: var(--color-white);
-        border: 1px solid var(--line-gray);
-        margin-top: 20%;
-    }
+.chat.active {
+  background-color: var(--color-white);
+  border: 1px solid var(--line-gray);
+  margin-top: 20%;
+}
 
-    .list > .icon
-    {
-        color: var(--color-white);
-        font-size: var(--font-size-20);
-    }
+.list > .icon {
+  color: var(--color-white);
+  font-size: var(--font-size-20);
+}
 
-    .list:hover > .icon
-    {
-        color: var(--color-black);
-    }
+.list:hover > .icon {
+  color: var(--color-black);
+}
 
-    .list:hover > a .icon
-    {
-        color: var(--color-black);
-    }
+.list:hover > a .icon {
+  color: var(--color-black);
+}
 
-    .chat.active > .icon
-    {
-        color: var(--color-black);
-    }
+.chat.active > .icon {
+  color: var(--color-black);
+}
 
-    .quickMenu .text {
-        display: none;
-        position: absolute;
-        bottom: 100%;
-        right: 0;
-        width: 300px;
-        box-sizing: border-box;
-        border: 1px solid var(--line-gray);
-        border-radius: 6px;
-        z-index: 9;
-        background: var(--color-white);
-    }
+.quickMenu .text {
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  right: 0;
+  width: 300px;
+  box-sizing: border-box;
+  border: 1px solid var(--line-gray);
+  border-radius: 6px;
+  z-index: 9;
+  background: var(--color-white);
+}
 
-    .quickMenu .text.show {
-        display: block;
-    }
+.quickMenu .text.show {
+  display: block;
+}
 
-    .wrap
-    {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 20px;
-        box-sizing: border-box;
-        border-bottom: 1px solid var(--line-gray);
-    }
+.wrap {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  border-bottom: 1px solid var(--line-gray);
+}
 
-    .wrap:last-of-type
-    {
-        border-bottom: none;
-    }
+.wrap:last-of-type {
+  border-bottom: none;
+}
 
-    .wrap .chatImg
-    {
-        width: 45px;
-        height: 45px;
-        background-color: var(--line-gray);
-        border-radius: 50%;
-    }
+.wrap .chatImg {
+  width: 45px;
+  height: 45px;
+  background-color: var(--line-gray);
+  border-radius: 50%;
+}
 
-    .wrap .content
-    {
-        display: flex;
-        width: 100%;
-        margin-right: 10px;
-        font-size: var(--font-size-14);
-        gap: 15px;
-    }
+.wrap .content {
+  display: flex;
+  width: 100%;
+  margin-right: 10px;
+  font-size: var(--font-size-14);
+  gap: 15px;
+}
 
-    .content .day
-    {
-        color: var(--dark-gray);
-        font-size: var(--font-size-12);
-    }
+.content .name {
+  color: var(--dark-gray);
+  font-size: var(--font-size-16);
+}
 
-    .infoWrap .info
-    {
-        display: flex;
-        justify-content: space-between;
-        gap: 15px;
-        font-size: var(--font-size-14);
-        color: var(--dark-gray);
-    }
+.infoWrap .info {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+  font-size: var(--font-size-14);
+  color: var(--dark-gray);
+}
 
-    .infoWrap .info .num
-    {
-        background-color: var(--main-color);
-        color: var(--color-white);
-        border-radius: 50%;
-        width: 20px;
-        display: flex;
-        justify-content: center;
-    }
+.infoWrap .info .num {
+  background-color: var(--main-color);
+  color: var(--color-white);
+  border-radius: 50%;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+}
