--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -17,6 +17,9 @@
     <!-- Swiper 라이브러리 추가 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <link rel="stylesheet" th:href="@{/css/chat/quickMenu.css}">
+    <script th:src="@{/js/chat/quickMenu.js}"></script>
 </head>
 
 <!-- 헤더 프래그먼트 불러오기 -->
