--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,69 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-
 <th:block th:fragment="footerFragment">
+    <div class="quickMenu">
+        <ul>
+            <li class="list chat" onclick="chatting()">
+                <span class="icon">
+                    <i class="fa-regular fa-comment-dots"></i>
+                </span>
+                <input type="hidden" id="cnt" value="0">
+                <div class="text" id="txtNone">
+                    <div class="wrap">
+                        진행중인 채팅이 없습니다.
+                    </div>
+                </div>
+                <div class="text" id="txtOn">
+                    <div class="wrap">
+                        <div class="chatImg"></div>
+                        <div class="infoWrap">
+                            <div class="content">
+                                <div class="name">새침한 차혜영</div>
+                                <div class="day"><span>1</span>일 전</div>
+                            </div>
+                            <div class="info">
+                                <div class="introduce">
+                                    밥을 먹으면 행복카다. 밥을...
+                                </div>
+                                <div class="num">
+                                    <span>1</span>
+                                </div>
+                            </div>
+                        </div><!--infoWrap-->
+                    </div><!--wrap-->
+                    <div class="wrap">
+                        <div class="chatImg"></div>
+                        <div class="infoWrap">
+                            <div class="content">
+                                <div class="name">행복한 문규노</div>
+                                <div class="day"><span>1</span>일 전</div>
+                            </div>
+                            <div class="info">
+                                <div class="introduce">
+                                    밥을 먹으면 행복카다. 밥을...
+                                </div>
+                                <div class="num">
+                                    <span>1</span>
+                                </div>
+                            </div>
+                        </div><!--infoWrap-->
+                    </div><!--wrap-->
+                </div>
+            </li>
+            <li class="list">
+                <a th:href="@{/mypage}">
+                    <span class="icon">
+                        <i class="fa-solid fa-user-pen"></i>
+                    </span>
+                </a>
+            </li>
+            <li class="list scrollTop" onclick="scrollTop()">
+                <span class="icon">
+                    <i class="fa-solid fa-arrow-up"></i>
+                </span>
+            </li>
+        </ul>
+    </div><!--quickMenu-->
     <footer class="footer">
         <div class="contact-info">
             주소 : 부산 부산진구 중앙대로 749<br>
