--- a/src/main/resources/templates/list/contestList.html
+++ b/src/main/resources/templates/list/contestList.html
@@ -50,7 +50,7 @@
                     <div class="contestWrap">
 
                         <div class="listValue" th:each="list : ${contestList}">
-                            <a href="#" th:href="@{/contest/view(id=${list.id})}">
+                            <a href="#" th:href="@{/contest/view(contestId=${list.id})}">
                             <div class="listArea">
                                 <div class="content A">
                                     <div class="endDate"><span th:text="${list.endDate}">8</span>일 남음</div>
