--- a/src/main/resources/static/css/chat/quickMenu.css
+++ b/src/main/resources/static/css/chat/quickMenu.css
@@ -1,162 +1,150 @@
+:root {
+    --main-color: #c1c0ff;
+    --sub-color: #ECFCE4;
+    --color-black: #000;
+    --dark-gray: #757575;
+    --line-gray: #D9D9D9;
+    --color-white: #fff;
 
-    :root
-    {
-        --main-color : #c1c0ff;
-        --sub-color : #ECFCE4;
-        --color-black : #000;
-        --dark-gray : #757575;
-        --line-gray: #D9D9D9;
-        --color-white : #fff;
-        
-        --font-size-32 : 32px;
-        --font-size-24 : 24px;
-        --font-size-20 : 20px;
-        --font-size-16 : 16px;
-        --font-size-14 : 14px;
-        --font-size-12 : 12px;
+    --font-size-32: 32px;
+    --font-size-24: 24px;
+    --font-size-20: 20px;
+    --font-size-16: 16px;
+    --font-size-14: 14px;
+    --font-size-12: 12px;
+}
 
-    }
+.quickMenu {
+    position: fixed;
+    bottom: 10%;
+    right: 40px;
+    width: 52px;
+    z-index: 9;
+}
 
-    a
-    {
-        color: var(--color-white);
-    }
+.quickMenu ul {
+    gap: 30px 0;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
-    .quickMenu
-    {
-        position: fixed;
-        bottom: 10%;
-        right: 40px;
-        width: 52px;
-        z-index: 9;
-    }
+.quickMenu ul li.list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    background-color: var(--color-black);
+    width: 100%;
+    height: 52px;
+    cursor: pointer;
+}
 
-    .quickMenu ul
-    {
-        gap: 30px 0;
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
+.quickMenu ul li.list:hover {
+    background-color: var(--color-white);
+    border: 1px solid var(--line-gray);
+}
 
-    ul li.list
-    {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 8px;
-        background-color: var(--color-black);
-        width: 100%;
-        height: 52px;
-        cursor: pointer;
-    }
+/* Apply font-size: 20px to all icons inside .quickMenu */
+.quickMenu .icon i {
+    font-size: var(--font-size-20);
+}
 
-    ul li.list:hover
-    {
-        background-color: var(--color-white);
-        border: 1px solid var(--line-gray);
-    }
+.quickMenu .chat.active {
+    background-color: var(--color-white);
+    border: 1px solid var(--line-gray);
+    margin-top: 20%;
+}
 
-    .chat.active
-    {
-        background-color: var(--color-white);
-        border: 1px solid var(--line-gray);
-        margin-top: 20%;
-    }
+.quickMenu .fa-user-pen {
+    font-size: 20px; /* Custom font size for fa-user-pen */
+    color: var(--color-white); /* Same color as other icons initially */
+    transition: color 0.3s ease; /* Smooth transition for hover */
+}
 
-    .list > .icon
-    {
-        color: var(--color-white);
-        font-size: var(--font-size-20);
-    }
+.quickMenu .list:hover .fa-user-pen {
+    color: var(--color-black); /* Change to black on hover */
+}
 
-    .list:hover > .icon
-    {
-        color: var(--color-black);
-    }
 
-    .list:hover > a .icon
-    {
-        color: var(--color-black);
-    }
+.quickMenu .list > .icon {
+    color: var(--color-white);
+    transition: color 0.3s ease; /* Smooth transition for color change */
+}
 
-    .chat.active > .icon
-    {
-        color: var(--color-black);
-    }
+.quickMenu .list:hover > .icon {
+    color: var(--color-black);
+}
 
-    .quickMenu .text {
-        display: none;
-        position: absolute;
-        bottom: 100%;
-        right: 0;
-        width: 300px;
-        box-sizing: border-box;
-        border: 1px solid var(--line-gray);
-        border-radius: 6px;
-        z-index: 9;
-        background: var(--color-white);
-    }
+.quickMenu .chat.active > .icon {
+    color: var(--color-black);
+}
 
-    .quickMenu .text.show {
-        display: block;
-    }
+.quickMenu .text {
+    display: none;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    width: 300px;
+    box-sizing: border-box;
+    border: 1px solid var(--line-gray);
+    border-radius: 6px;
+    z-index: 9;
+    background: var(--color-white);
+}
 
-    .wrap
-    {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 20px;
-        box-sizing: border-box;
-        border-bottom: 1px solid var(--line-gray);
-    }
+.quickMenu .text.show {
+    display: block;
+}
 
-    .wrap:last-of-type
-    {
-        border-bottom: none;
-    }
+.quickMenu .wrap {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    border-bottom: 1px solid var(--line-gray);
+}
 
-    .wrap .chatImg
-    {
-        width: 45px;
-        height: 45px;
-        background-color: var(--line-gray);
-        border-radius: 50%;
-    }
+.quickMenu .wrap:nth-last-child(1) {
+    border-bottom: none;
+}
 
-    .wrap .content
-    {
-        display: flex;
-        width: 100%;
-        margin-right: 10px;
-        font-size: var(--font-size-14);
-        gap: 15px;
-    }
+.quickMenu .wrap .chatImg {
+    width: 45px;
+    height: 45px;
+    background-color: var(--line-gray);
+    border-radius: 50%;
+}
 
-    .content .day
-    {
-        color: var(--dark-gray);
-        font-size: var(--font-size-12);
-    }
+.quickMenu .wrap .content {
+    display: flex;
+    width: 100%;
+    margin-right: 10px;
+    font-size: var(--font-size-14);
+    gap: 15px;
+}
 
-    .infoWrap .info
-    {
-        display: flex;
-        justify-content: space-between;
-        gap: 15px;
-        font-size: var(--font-size-14);
-        color: var(--dark-gray);
-    }
+.quickMenu .content .day {
+    color: var(--dark-gray);
+    font-size: var(--font-size-12);
+}
 
-    .infoWrap .info .num
-    {
-        background-color: var(--main-color);
-        color: var(--color-white);
-        border-radius: 50%;
-        width: 20px;
-        display: flex;
-        justify-content: center;
-    }
+.quickMenu .infoWrap .info {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    font-size: var(--font-size-14);
+    color: var(--dark-gray);
+}
+
+.quickMenu .infoWrap .info .num {
+    background-color: var(--main-color);
+    color: var(--color-white);
+    border-radius: 50%;
+    width: 20px;
+    display: flex;
+    justify-content: center;
+}
