--- a/src/main/resources/static/css/list/main.css
+++ b/src/main/resources/static/css/list/main.css
@@ -14,7 +14,6 @@
 }
 
 main {
-    /*margin-top: 90px;*/
     display: flex;
     justify-content: center;
 }
@@ -35,7 +34,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    /*border: solid 1px black;*/
 }
 
 .swiper-slide img {
@@ -43,48 +41,44 @@ main {
     width: 1200px;
     height: 464px;
     object-fit: cover;
-    margin: auto; /* 추가: 이미지를 가운데 정렬 */
+    margin: auto;
 }
 
-/* 네비게이션 버튼 커스터마이징 */
-
-.swiper-button-next::after, .swiper-button-prev::after {
-    color: black; /* 화살표 색상 */
-    font-size: 20px; /* 화살표 크기 조정 (필요 시) */
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    color: black;
+    font-size: 20px;
 }
 
-.swiper-button-next, .swiper-button-prev {
-    /*color: #757575;  화살표 색상 */
-    width: 50px; /* 버튼 너비 */
-    height: 50px; /* 버튼 높이 */
+.swiper-button-next,
+.swiper-button-prev {
+    width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.swiper-button-next:hover, .swiper-button-prev:hover {
- color: #757575; /* 화살표 색상 */
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    color: #757575;
 }
 
-/* 페이지네이션 기본 스타일 (비활성화된 상태) */
 .swiper-pagination-bullet {
-    background-color: #757575 !important; /* 기본 회색 */
-    opacity: 1 !important; /* 불릿의 불투명도 */
-    width: 10px !important; /* 불릿 너비 */
-    height: 10px !important; /* 불릿 높이 */
-    margin: 0 4px !important; /* 불릿 사이의 간격 */
-    border-radius: 50% !important; /* 불릿을 원형으로 */
+    background-color: #757575 !important;
+    width: 10px !important;
+    height: 10px !important;
+    margin: 0 4px !important;
+    border-radius: 50% !important;
 }
 
-/* 활성화된 불릿 스타일 */
 .swiper-pagination-bullet-active {
-    background-color: #000000 !important; /* 검정색 */
-    width: 12px !important; /* 크기를 조금 더 크게 */
+    background-color: #000 !important;
+    width: 12px !important;
     height: 12px !important;
 }
 
 .section {
-    /*margin: 60px 0 90px 0;*/
     margin: 60px 0 0;
 }
 
@@ -121,7 +115,7 @@ main {
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
 }
 
-.cardConWarap .cardImage {
+.cardImage {
     width: 260px;
     height: 300px;
     border: 1px solid var(--line-gray);
@@ -162,10 +156,6 @@ a {
 
 .context.gray {
     color: var(--dark-gray);
-}
-
-.conIcon {
-    gap: 5px;
 }
 
 .section.B {
@@ -226,7 +216,6 @@ a {
     line-height: 10px;
 }
 
-.listContent .listValue > *,
 .importData .price {
     font-size: var(--font-size-14);
 }
