--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -22,26 +22,7 @@
                                 <div class="day"><span>1</span>일 전</div>
                             </div>
                             <div class="info">
-                                <div class="introduce">
-                                    밥을 먹으면 행복카다. 밥을...
-                                </div>
-                                <div class="num">
-                                    <span>1</span>
-                                </div>
-                            </div>
-                        </div><!--infoWrap-->
-                    </div><!--wrap-->
-                    <div class="wrap">
-                        <div class="chatImg"></div>
-                        <div class="infoWrap">
-                            <div class="content">
-                                <div class="name">행복한 문규노</div>
-                                <div class="day"><span>1</span>일 전</div>
-                            </div>
-                            <div class="info">
-                                <div class="introduce">
-                                    밥을 먹으면 행복카다. 밥을...
-                                </div>
+                                <div class="introduce">밥을 먹으면 행복카다. 밥을...</div>
                                 <div class="num">
                                     <span>1</span>
                                 </div>
@@ -63,7 +44,8 @@
                 </span>
             </li>
         </ul>
-    </div><!--quickMenu-->
+    </div>
+
     <footer class="footer">
         <div class="contact-info">
             주소 : 부산 부산진구 중앙대로 749<br>
@@ -80,6 +62,7 @@
             &copy; The Government of the Republic of Korea. All rights reserved.
         </div>
     </footer>
+
 </th:block>
 
 </html>
