--- a/src/main/resources/templates/list/main.html
+++ b/src/main/resources/templates/list/main.html
@@ -6,6 +6,9 @@
     <title>메인 페이지</title>
     <link rel="stylesheet" th:href="@{/css/list/main.css}">
     <script th:src="@{/js/list/main.js}"></script>
+    <!-- Swiper 라이브러리 추가 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
 <th:block layout:fragment="content">
