--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -3,6 +3,8 @@
 <head>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.4.js"
+            integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
     <!-- jQuery CDN (최신 버전) -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
@@ -18,10 +20,8 @@
     <!-- Custom CSS Files -->
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-
     <!-- Custom Chat Menu CSS and JS -->
     <link rel="stylesheet" th:href="@{/css/chat/quickMenu.css}">
-    <script src="/js/chat/quickMenu.js"></script>
 </head>
 
 <!-- 헤더 프래그먼트 불러오기 -->
