--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <script src="/js/chat/quickMenu.js"></script>
+</head>
 <th:block th:fragment="footerFragment">
     <div class="quickMenu">
         <ul>
@@ -38,7 +41,7 @@
                     </span>
                 </a>
             </li>
-            <li class="list scrollTop" onclick="scrollTop()">
+            <li class="list scrollTop" onclick="scroll()">
                 <span class="icon">
                     <i class="fa-solid fa-arrow-up"></i>
                 </span>
