--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <script src="/js/chat/quickMenu.js"></script>
-</head>
+<!--<head>-->
+<!--    <script src="/js/chat/quickMenu.js"></script>-->
+<!--</head>-->
 <th:block th:fragment="footerFragment">
     <div class="quickMenu">
         <ul>
@@ -41,7 +41,7 @@
                     </span>
                 </a>
             </li>
-            <li class="list scrollTop" onclick="scroll()">
+            <li class="list scrollTop" onclick="scrollToTop()">
                 <span class="icon">
                     <i class="fa-solid fa-arrow-up"></i>
                 </span>
