--- a/src/main/resources/templates/contest/ContestUpload.html
+++ b/src/main/resources/templates/contest/ContestUpload.html
@@ -12,7 +12,7 @@
     <form action="/contest" method="post" enctype="multipart/form-data">
 
         <h3>회사명(단체명)</h3>
-        <input type="text" id="conCompanyName" name="conCompanyName" placeholder="회사명을 입력해 주세요" required>
+        <input class="companytype" type="text" id="conCompanyName" name="conCompanyName" placeholder="회사명을 입력해 주세요" required>
 
         <h3>한 줄 소개</h3>
         <textarea id="conOneLiner" name="conOneLiner" rows="3" placeholder="우리 서비스는 OO을 판매하는 회사입니다." required></textarea>
@@ -25,7 +25,7 @@
         </select>
 
         <h3>로고명</h3>
-        <input type="text" id="conLogoName" name="conLogoName" placeholder="로고명을 입력해 주세요." required>
+        <input class="companytype" type="text" id="conLogoName" name="conLogoName" placeholder="로고명을 입력해 주세요." required>
 
         <h3>브리핑</h3>
         <textarea id="conBriefing" name="conBriefing" rows="5" placeholder="브리핑을 입력해 주세요" required></textarea>
