--- a/src/main/resources/static/css/contest/ContestUpload1.css
+++ b/src/main/resources/static/css/contest/ContestUpload1.css
@@ -1,6 +1,6 @@
 
         .Contestupload1 {
-            max-width: 600px;
+            width: 1000px;
             margin: auto;
             background: white;
             padding: 20px;
@@ -28,9 +28,7 @@
             margin-left: 5px;
             vertical-align: middle;
         }
-        input[type="text"],
-        input[type="number"],
-        input[type="date"],
+        .companttype,
         select {
             width: 100%;
             padding: 10px;
@@ -139,7 +137,7 @@
             display: inline-block;
             width: 48%;
             padding: 10px;
-            background-color: #007bff;
+            background-color: black;
             color: white;
             border: none;
             border-radius: 4px;
@@ -150,7 +148,7 @@
             font-weight: bold;
         }
         .btn:hover {
-            background-color: #0056b3;
+            background-color: rgb(193, 192, 255);
         }
         .previous-btn {
             background-color: #6c757d;
