--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -18,12 +18,12 @@
     <!-- Bootstrap JS (jQuery 다음에 로드) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="/js/chat/quickMenu.js"></script>
+    <script src="/js/fragments/quickMenu.js"></script>
     <!-- Custom CSS Files -->
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <!-- Custom Chat Menu CSS and JS -->
-    <link rel="stylesheet" th:href="@{/css/chat/quickMenu.css}">
+    <link rel="stylesheet" th:href="@{/css/fragments/quickMenu.css}">
 </head>
 
 <!-- 헤더 프래그먼트 불러오기 -->
