--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -18,7 +18,7 @@
     <!-- Bootstrap JS (jQuery 다음에 로드) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="/js/fragments/quickMenu.js"></script>
+    <script src="/js/list/quickMenu.js"></script>
     <!-- Custom CSS Files -->
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
