:lipstick: 채팅 종료버튼 추가하고 삭제 API 요청 생성

--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -19,6 +19,7 @@
         <div class="chat-header">
           <div class="chat-title" th:text="${receiver}" id="receiver">상대방 유저</div>
           <input id="sender" type="hidden" th:value="${sender}">
+          <button class="exit-button" id="exitButton"> 채팅 종료하기</button>
         </div>
         <div class="chat-body" id="chatBody"></div>
         <div class="chat-footer">
