--- a/src/main/resources/static/css/chat/chatRoom.css
+++ b/src/main/resources/static/css/chat/chatRoom.css
@@ -166,3 +166,20 @@ body {
 .chat-footer button:hover {
   background-color: #e65c00;
 }
+
+
+.exit-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 10px;
+  background-color: #282828;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.exit-button:hover {
+  background-color: #d32f2f;
+}
