--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -44,7 +44,7 @@
             <section>
                 <form>
                     <div class="applyContent">
-                        <input type="text" placeholder="제목을 입력해주세요.">
+                        <input type="text" placeholder="제목을 입력해주세요." class="bers">
                         <div class="contArea">
                             <div class="imgArea"></div>
                             <div class="textArea"></div>
