--- a/src/main/resources/templates/notifications/noticeWrite.html
+++ b/src/main/resources/templates/notifications/noticeWrite.html
@@ -12,7 +12,7 @@
     <!-- Main Content -->
     <div class="container">
         <h2>공지사항 등록</h2>
-        <form id="noticeForm" th:action="@{/notice/register}" method="post">
+        <form id="noticeForm" th:action="@{/notice/admin/register}" method="post">
             <div class="form-group">
                 <label for="date">날짜</label>
                 <input type="date" id="date" name="date" class="form-control"
