--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-
+<script src="/js/list/quickMenu.js" defer></script>
 <th:block th:fragment="footerFragment">
     <div class="quickMenu">
         <ul>
             <li class="list chat" onclick="chatting()">
                 <span class="icon">
                     <i class="fa-regular fa-comment-dots"></i>
+                    <span class="notification-badge" style="display: none;">N</span> <!-- 알림 배지 -->
+                </span>
                 </span>
                 <input type="hidden" id="cnt" value="0">
                 <div class="text" id="txtNone">
