--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -12,6 +12,10 @@
         <img th:src="@{/img/fragments/logoGG.png}" alt="D'OH Logo" width="150px" height="75px">
     </a>
     <h2>이메일 가입하기</h2>
+    <label for="nickName">닉네임</label>
+    <div class="nickName-container">
+        <input type="text" id="nickName" name="nickName" required>
+    </div>
     <label for="email">이메일 주소</label>
     <div class="email-container">
         <input type="text" id="email" name="userEmail" required>
