--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -29,15 +29,15 @@
             <!-- 공지사항 리스트 반복 -->
             <tr class="toggle-row" th:each="notice : ${noticeList}"
                 th:data-target="'#content-row-' + ${notice.noticeNum}" th:onclick="toggleContent(this)">
-                <td th:text="${notice.title}"></td> <!-- 공지사항 제목 -->
-                <td th:text="${#dates.format(notice.date, 'yyyy.MM.dd')}"></td> <!-- 공지사항 작성일 -->
+                <td th:text="${notice.noticeTitle}"></td> <!-- 공지사항 제목 -->
+                <td th:text="${#dates.format(notice.noticeCreateTime, 'yyyy.MM.dd')}"></td> <!-- 공지사항 작성일 -->
             </tr>
 
             <!-- 공지사항 내용 반복 -->
             <tr th:each="notice : ${noticeList}" th:id="'content-row-' + ${notice.noticeNum}" class="content-row"
                 style="display: none;">
                 <td colspan="2">
-                    <div th:text="${notice.content}"></div> <!-- 공지사항 내용 -->
+                    <div th:text="${notice.noticeContent}"></div> <!-- 공지사항 내용 -->
                     <div class="buttons">
                         <a th:href="@{/notice/edit(noticeNum=${notice.noticeNum})}"
                            class="btn btn-primary btn-sm">수정</a>
@@ -73,9 +73,7 @@
 
         <!-- 등록 버튼 -->
         <div class="buttons">
-
             <a th:href="@{/notice/admin/write}" class="btn">등록</a>
-
         </div>
     </div>
 
