--- a/src/main/resources/templates/user/MyPageProfile.html
+++ b/src/main/resources/templates/user/MyPageProfile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="/fragments/layout">
+      layout:decorate="~{/fragments/layout}">
 
 <head>
     <meta charset="UTF-8">
@@ -20,125 +20,127 @@
     <script type="text/javascript" th:src="@{/js/user/portfolioDetail.js}"></script>
 
 </head>
+<body>
 <th:block layout:fragment="content">
-<form>
-<div class="container">
-    <div class="profile">
-        <div>
-            <h5>프로필 정보</h5>
+<form method="post" action="/profile/write">
+    <div class="container">
+        <div class="profile">
+            <div>
+                <h5>프로필 정보</h5>
+            </div>
+                <h6>닉네임</h6>
+            <div class="nickname">
+                <input type="text" name="userNickName" id="userNickName">
+            </div>
+                <h6>한줄 프로필</h6>
+            <div class="one-info">
+                <input type="text" placeholder="예시)창의적 발상과 디테일한 완성도를 갖춘 디자이너." name="profileOneLiner" id="profileOneLiner">
+            </div>
+                <h6>디자이너 소개</h6>
+            <div class="designer-info">
+                <textarea name="profileIntroduce" id="profileIntroduce" placeholder="예시)
+    디자인은 단순한 아름다움 이상의 가치를 전달해야 한다고 믿습니다. 저는 사용자 경험을 고려한 실용적인 디자인과, 창의적인 감각이 조화를 이루는 작업을 추구합니다. 각 프로젝트마다 고객의 요구를 깊이 이해하고, 그 안에서 차별화된 아이디어를 제시하여 특별한 결과물을 만들어냅니다. 끊임없는 탐구와 새로운 트렌드에 대한 감각으로, 단순한 작업이 아닌 의미 있는 디자인을 실현하기 위해 노력하고 있습니다."></textarea>
+            </div>
+                <h6>마이페이지 URL</h6>
+            <div class="MyPageURL">
+                <input type="url" name="myPageUrl" id="myPageUrl">
+            </div>
+        <hr>
         </div>
-            <h6>닉네임</h6>
-        <div class="nickname">
-            <input type="text">
-        </div>
-            <h6>한줄 프로필</h6>
-        <div class="one-info">
-            <input type="text" placeholder="예시)창의적 발상과 디테일한 완성도를 갖춘 디자이너.">
-        </div>
-            <h6>디자이너 소개</h6>
-        <div class="designer-info">
-            <textarea placeholder="예시)
-디자인은 단순한 아름다움 이상의 가치를 전달해야 한다고 믿습니다. 저는 사용자 경험을 고려한 실용적인 디자인과, 창의적인 감각이 조화를 이루는 작업을 추구합니다. 각 프로젝트마다 고객의 요구를 깊이 이해하고, 그 안에서 차별화된 아이디어를 제시하여 특별한 결과물을 만들어냅니다. 끊임없는 탐구와 새로운 트렌드에 대한 감각으로, 단순한 작업이 아닌 의미 있는 디자인을 실현하기 위해 노력하고 있습니다."></textarea>
-        </div>
-            <h6>마이페이지 URL</h6>
-        <div class="MyPageURL">
-            <input type="url">
-        </div>
-    <hr>
+        <div class="career">
+            <div>
+                <h5>커리어 정보</h5>
+            </div>
+            <h6>1:1의뢰 상태 설정</h6>
+            <div>
+                <input type="radio" id="possible" name="commissionStatus" value="1">
+                <label for="possible">가능</label>
+                <input type="radio" id="impossible" name="commissionStatus" value="0">
+                <label for="impossible">불가능</label>
+            </div>
+            <h6>연락 가능 시간</h6>
+            <div>
+                <input type="time" id="messageStart" name="messageStart">
+            </div>
+            <h6>연락 불가능 시간</h6>
+            <div>
+                <input type="time" id="messageEnd" name="messageEnd">
+            </div>
+            <h6>오프라인 미팅 가능 지역</h6>
+            <div class="region">
+                <select name="mittingLocation" id="mittingLocation">
+                    <option selected disabled>지역 선택</option>
+                    <option>서울</option>
+                    <option>경기</option>
+                    <option>인천</option>
+                    <option>부산</option>
+                    <option>광주</option>
+                </select>
+            </div>
+                <h6>보유 스킬</h6>
     </div>
-    <div class="career">
-        <div>
-            <h5>커리어 정보</h5>
+        <div class="select-skill">
+                <input type="checkbox" id="Adobe Photoshop" name="select-skill" >
+                <label for="Adobe Photoshop" class="select-skill-item">Adobe Photoshop</label>
+
+                <input type="checkbox" id="Adobe Illustration" name="select-skill" >
+                <label for="Adobe Illustration" class="select-skill-item">Adobe Illustration</label>
+
+                <input type="checkbox" id="Adobe InDesign" name="select-skill" >
+                <label for="Adobe InDesign" class="select-skill-item">Adobe InDesign</label>
+
+                <input type="checkbox" id="Adobe After Effects" name="select-skill" >
+                <label for="Adobe After Effects" class="select-skill-item">Adobe After Effects</label>
+
+                <input type="checkbox" id="Adobe Premiere" name="select-skill" >
+                <label for="Adobe Premiere" class="select-skill-item">Adobe Premiere</label>
+
+                <input type="checkbox" id="Adobe Lightroom" name="select-skill" >
+                <label for="Adobe Lightroom" class="select-skill-item">Adobe Lightroom</label>
+
+                <input type="checkbox" id="Adobe XD" name="select-skill" >
+                <label for="Adobe XD" class="select-skill-item">Adobe XD</label>
+
+                <input type="checkbox" id="Rhino 3D" name="select-skill" >
+                <label for="Rhino 3D" class="select-skill-item">Rhino 3D</label>
+
+                <input type="checkbox" id="AutoCAD" name="select-skill" >
+                <label for="AutoCAD" class="select-skill-item">AutoCAD</label>
+
+                <input type="checkbox" id="3ds Max" name="select-skill" >
+                <label for="3ds Max" class="select-skill-item">3ds Max</label>
+
+                <input type="checkbox" id="Cinema 4D" name="select-skill" >
+                <label for="Cinema 4D" class="select-skill-item">Cinema 4D</label>
+
+                <input type="checkbox" id="Blender" name="select-skill" >
+                <label for="Blender" class="select-skill-item">Blender</label>
+
+                <input type="checkbox" id="KeyShot" name="select-skill" >
+                <label for="KeyShot" class="select-skill-item">KeyShot</label>
+
+                <input type="checkbox" id="SketchUp" name="select-skill" >
+                <label for="SketchUp" class="select-skill-item">SketchUp</label>
+
+                <input type="checkbox" id="Figma" name="select-skill" >
+                <label for="Figma" class="select-skill-item">Figma</label>
+
+                <input type="checkbox" id="Sketch" name="select-skill" >
+                <label for="Sketch" class="select-skill-item">Sketch</label>
+
+                <input type="checkbox" id="Framer" name="select-skill" >
+                <label for="Framer" class="select-skill-item">Framer</label>
+
+                <input type="checkbox" id="MAYA" name="select-skill" >
+                <label for="MAYA" class="select-skill-item">MAYA</label>
         </div>
-        <h6>1:1의뢰 상태 설정</h6>
-        <div>
-            <input type="radio" id="possible">
-            <label for="possible">가능</label>
-            <input type="radio" id="impossible">
-            <label for="impossible">불가능</label>
-        </div>
-        <h6>오프라인 미팅 가능 여부</h6>
-        <div>
-            <input type="radio">
-            <label for="possible">가능</label>
-            <input type="radio">
-            <label for="impossible">불가능</label>
-        </div>
-        <h6>오프라인 미팅 가능 지역</h6>
-        <div class="region">
-            <select>
-                <option selected disabled>지역 선택</option>
-                <option>서울</option>
-                <option>경기</option>
-                <option>인천</option>
-                <option>부산</option>
-                <option>광주</option>
-            </select>
-        </div>
-            <h6>보유 스킬</h6>
-</div>
-    <div class="select-skill">
-            <input type="checkbox" id="Adobe Photoshop" name="select-skill" >
-            <label for="Adobe Photoshop" class="select-skill-item">Adobe Photoshop</label>
-
-            <input type="checkbox" id="Adobe Illustration" name="select-skill" >
-            <label for="Adobe Illustration" class="select-skill-item">Adobe Illustration</label>
-
-            <input type="checkbox" id="Adobe InDesign" name="select-skill" >
-            <label for="Adobe InDesign" class="select-skill-item">Adobe InDesign</label>
-
-            <input type="checkbox" id="Adobe After Effects" name="select-skill" >
-            <label for="Adobe After Effects" class="select-skill-item">Adobe After Effects</label>
-
-            <input type="checkbox" id="Adobe Premiere" name="select-skill" >
-            <label for="Adobe Premiere" class="select-skill-item">Adobe Premiere</label>
-
-            <input type="checkbox" id="Adobe Lightroom" name="select-skill" >
-            <label for="Adobe Lightroom" class="select-skill-item">Adobe Lightroom</label>
-
-            <input type="checkbox" id="Adobe XD" name="select-skill" >
-            <label for="Adobe XD" class="select-skill-item">Adobe XD</label>
-
-            <input type="checkbox" id="Rhino 3D" name="select-skill" >
-            <label for="Rhino 3D" class="select-skill-item">Rhino 3D</label>
-
-            <input type="checkbox" id="AutoCAD" name="select-skill" >
-            <label for="AutoCAD" class="select-skill-item">AutoCAD</label>
-
-            <input type="checkbox" id="3ds Max" name="select-skill" >
-            <label for="3ds Max" class="select-skill-item">3ds Max</label>
-
-            <input type="checkbox" id="Cinema 4D" name="select-skill" >
-            <label for="Cinema 4D" class="select-skill-item">Cinema 4D</label>
-
-            <input type="checkbox" id="Blender" name="select-skill" >
-            <label for="Blender" class="select-skill-item">Blender</label>
-
-            <input type="checkbox" id="KeyShot" name="select-skill" >
-            <label for="KeyShot" class="select-skill-item">KeyShot</label>
-
-            <input type="checkbox" id="SketchUp" name="select-skill" >
-            <label for="SketchUp" class="select-skill-item">SketchUp</label>
-
-            <input type="checkbox" id="Figma" name="select-skill" >
-            <label for="Figma" class="select-skill-item">Figma</label>
-
-            <input type="checkbox" id="Sketch" name="select-skill" >
-            <label for="Sketch" class="select-skill-item">Sketch</label>
-
-            <input type="checkbox" id="Framer" name="select-skill" >
-            <label for="Framer" class="select-skill-item">Framer</label>
-
-            <input type="checkbox" id="MAYA" name="select-skill" >
-            <label for="MAYA" class="select-skill-item">MAYA</label>
+            <div class="end">
+                <hr>
+                <input type="reset" class="reset" value="초기화">&nbsp;&nbsp;&nbsp;&nbsp;
+                <input type="submit" class="submit" value="저장하기">
+            </div>
     </div>
-        <div class="end">
-            <hr>
-            <input type="reset" class="reset" value="초기화">&nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="submit" class="submit" value="저장하기">
-        </div>
-</div>
-</form>
+    </form>
 </th:block>
-
+</body>
 </html>
