--- a/src/main/resources/templates/user/MyPage.html
+++ b/src/main/resources/templates/user/MyPage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="/fragments/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/fragments/layout}" lang="kr">
 
 <head>
     <meta charset="UTF-8">
@@ -21,43 +20,54 @@
 
 </head>
 <th:block layout:fragment="content">
+    <body>
     <!-- <banner>
         <img th:src="@{/img/banner.png}" alt="banner"  height="240px">
     </banner> -->
+    <form method="get" action="/users/mypage">
     <main>
         <div class="container">
             <div class="sidebar">
                 <img th:src="@{/img/quokka.jpg}" alt="quokka"><br>
                 <div class="username">
-                    쿼카
+                    <p th:if="${profile != null and profile?.userNickName != null}" th:text="${profile?.userNickName}" style="font-size: 15px"></p>
+                    <p th:if="${profile == null or profile?.userNickName == null}" th:text="${myPageDTO?.userEmail}"></p>
                 </div>
                 <div>
-                    https://naver.com/
-                </div><br>
-                <a href="/profileWrite" class="edit-profile">프로필 수정하기</a>
+                    <p th:if="${profile != null and profile?.myPageUrl != null}" th:text="${profile?.myPageUrl}"></p>
+                    <p th:if="${profile == null or profile?.myPageUrl == null}">정보 없음</p>
+                </div>
+                <a href="/users/mypage/profile/write" class="edit-profile">프로필 수정하기</a>
                 <div class="activity">
                     <div class="section-title">
                         <h6>라우드 활동</h6>
                     </div>
-                    <span>평균 응답시간: 정보 없음</span>
-                    <span>연락 가능시간: 정보 없음</span>
+                    <div>
+                        연락 가능 시간: <p th:if="${profile != null and profile?.messageStart != null}" th:text="${profile.messageStart}"></p>~
+                        <p th:if="${profile == null or profile?.messageStart == null}">정보 없음</p>
+                        <p th:if="${profile != null and profile?.messageEnd != null}" th:text="${profile.messageEnd}"></p>
+                        <p th:if="${profile == null or profile?.messageEnd == null}">정보 없음</p>
+                    </div>
                 </div>
             </div> <!-- sidebar end -->
             <div class="main-class">
-                <a href="/profileWrite" class="profilewrite">프로필 작성하러가기</a>
-                <!-- <h2>안녕하세요</h2>
-                반갑습니다. -->
+                <a href="/users/mypage/profile/write" class="profilewrite" th:if="${profile == null or profile?.profileOneLiner == null}">프로필 작성하러가기</a>
+                <div class="profileOneLiner">
+                    <p th:if="${profile != null and profile?.profileOneLiner != null}" th:text="${profile?.profileOneLiner}"></p>
+                </div>
+                <div class="profileIntroduce">
+                    <p th:if="${profile !=null and profile?.profileIntroduce != null}" th:text="${profile?.profileIntroduce}"></p>
+                </div>
             </div>
             <div class="button-class">
                 <div class="profilesetting">
-                    <a href="/mypage" class="underline">프로필 설정</a>
+                    <a href="/users/mypage" class="underline">프로필 설정</a>
                 </div>
                 <div class="portfolio">
-                     <a href="/portfolio" class="underline">포트폴리오</a>
-<!--                    <button onclick="loadportfolio()">포트폴리오 불러오기</button>-->
+                     <a href="/users/mypage/portfolio" class="underline">포트폴리오</a>
                 </div>
                 <div class="upload">
-                    <a href="/upload" class="underline">작품 업로드하기</a>
+                    <a href="/users/mypage/upload" class="underline">작품 업로드하기</a>
                 </div>
             </div> <!-- button-class end -->
             <div class="management">
@@ -84,7 +94,8 @@
 
             </div> <!-- container end -->
         </main>
-
+    </form>
+    </body>
 </th:block>
 
 </html>
